# commitmux

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  plan.md
.github/workflows/: ci.yml
crates/embed/: Cargo.toml
crates/embed/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs  patch.rs  walker.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  tools.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  queries.rs  schema.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/: CONTEXT.md  IMPL-audit-fixes.md  IMPL-bootstrap.md  IMPL-feature-wave-1.md  IMPL-memory-search.md  IMPL-ux-audit-fixes-r2.md  IMPL-ux-audit-fixes-r4.md  IMPL-ux-audit-fixes.md  IMPL-vector-embeddings.md  cold-start-audit-prompt.md  cold-start-audit-r2.md  cold-start-audit.md  mcp.md  vector-embeddings.md
docs/IMPL/: IMPL-memory-freshness.md  IMPL-roadmap.md
docs/IMPL-feature-wave-1-agents/: agent-a.md  agent-b.md  agent-c.md  agent-d.md  agent-e.md
docs/IMPL-vector-embeddings-agents/: agent-1a.md  agent-1b.md  agent-2a.md  agent-2b.md  agent-wave0.md
src/: main.rs
tests/: integration.rs
