[workspace]
members = [".", "crates/types", "crates/store", "crates/ingest", "crates/mcp"]
resolver = "2"

[package]
name = "commitmux"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "commitmux"
path = "src/main.rs"

[dependencies]
commitmux-types = { path = "crates/types" }
commitmux-store = { path = "crates/store" }
commitmux-ingest = { path = "crates/ingest" }
commitmux-mcp = { path = "crates/mcp" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
git2 = { version = "0.19", features = ["vendored-libgit2"] }

[dev-dependencies]
tempfile = "3"
